--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
               layout design. This helps to create great visual interest on the
               website.
             </p>
-            <a href="#" style="margin-top: 3vw">Tab navigation - 1</a>
+            <a href="#showcase-sect" style="margin-top: 3vw"
+              >Tab navigation - 1</a
+            >
           </div>
           <div class="box">
             <h3>
@@ -66,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="sect">
+      <div class="sect" id="showcase-sect">
         <h2>
           You can use four <br />
           type of scrollbars.
