--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               layout design. This helps to create great visual interest on the
               website.
             </p>
-            <a href="#showcase-sect" style="margin-top: 3vw"
+            <a href="#showcase-sect1" style="margin-top: 3vw"
               >Tab navigation - 1</a
             >
           </div>
@@ -68,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="sect" id="showcase-sect">
+      <div class="sect" id="showcase-sect1">
         <h2>
           You can use four <br />
           type of scrollbars.
@@ -76,7 +76,9 @@
         <div class="cont">
           <div class="scroller-main-cont scrollerY">
             <h3>Scroll only Y axis.</h3>
-            <a href="#" style="margin-top: 25vw">Tab navigation - 3</a>
+            <a href="#showcase-sect2" style="margin-top: 25vw"
+              >Tab navigation - 3</a
+            >
           </div>
           <div class="scroller-main-cont scrollerX">
             <h3>Scroll only X axis.</h3>
@@ -90,7 +92,10 @@
           </div>
           <div class="scroller-main-cont">
             <h3>Scroll both axis.</h3>
-            <a href="#" style="margin-left: 75vw; margin-top: 25vw"
+            <a
+              href="#"
+              id="showcase-sect2"
+              style="margin-left: 75vw; margin-top: 25vw"
               >Tab navigation - 6</a
             >
           </div>
