--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <main class="scroller-main-cont scrollerY" data-classname="main-wrapper">
+    <main class="scroller-main-cont scrollerY" data-class="main-wrapper">
       <div class="hero-sect sect">
         <h1>
           The smooth <span>-></span> <br />
